--- a/footer.css
+++ b/footer.css
@@ -163,3 +163,10 @@
                 }
             }
             
+
+/* ///// */
+
+            .footersocial-icons{
+                gap:5px;
+                font-size: 20px;
+            }
